--- a/covered-bridge-squeeze-page/src/pages/about-page.css
+++ b/covered-bridge-squeeze-page/src/pages/about-page.css
@@ -9,20 +9,30 @@
 }
 
 .container {
-  /* max-width: 1200px; */
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem 1rem;
-  width: calc(100vw - 4rem);
+  padding: 0 1rem;
+  width: calc(100vw - 2rem);
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .inner-container {
-    max-width: 1200px;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .about-container {
   /* Gradient background that goes from off-white (#f5f5f5) to a light gray */
   background: linear-gradient(180deg, #f5f5f5, #d9d9d9);
+}
+
+.about__header-img {
+  width: 450px;
+  height: auto;
 }
 
 .gradient-text {
@@ -82,6 +92,7 @@ header p {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
+  margin-top: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -127,14 +138,16 @@ header p {
   color: var(--primary);
 }
 
-.card ul {
+.about__card-ul {
   list-style-position: inside;
-  margin-top: 1rem;
+  position: relative;
+  top: -16px;
   margin-left: 1rem;
 }
 
 .card ul li {
   margin-bottom: 0.5rem;
+  font-size: 18px;
 }
 
 /* Testimonial */
@@ -170,7 +183,7 @@ header p {
 
 .cta h2 {
   font-size: 2rem;
-  margin-bottom: 1.5rem;
+  margin: 0 auto 32px auto;
 }
 
 .btn {
@@ -179,7 +192,10 @@ header p {
   color: var(--background);
   font-weight: bold;
   padding: 1rem 2rem;
-  border-radius: 4px;
+  border-top-left-radius: 4px !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
   text-decoration: none;
   font-size: 1.1rem;
   transition: background-color 0.3s;
@@ -227,6 +243,10 @@ header p {
 
 .card__ul {
   font-size: 18px;
+}
+
+.about__submit-btn {
+  padding: 1rem 5.8rem;
 }
 
 .btn,
