Finish site for laptop size only

--- a/covered-bridge-squeeze-page/src/pages/contact-page.css
+++ b/covered-bridge-squeeze-page/src/pages/contact-page.css
@@ -65,6 +65,11 @@
   font-weight: 600;
 }
 
+.card__divider {
+  width: 100%;
+  max-width: 106px;
+}
+
 @keyframes jiggle {
   0% {
     transform: translateX(0);
