--- a/covered-bridge-squeeze-page/src/pages/contact-page.css
+++ b/covered-bridge-squeeze-page/src/pages/contact-page.css
@@ -18,6 +18,7 @@
 .contact--header {
   width: 100%;
   max-width: 100vw;
+  padding: 2rem;
 }
 
 .contact-page .card-icon {
@@ -49,6 +50,7 @@
 
 .contact__submit-btn {
   padding: 1rem 6rem;
+  font-size: 18px;
 }
 
 .contact__submit-btn:hover {
@@ -94,5 +96,20 @@
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+@media (max-width: 768px) {
+  .contact__header-img {
+    width: 312px;
+    margin-bottom: 0.25rem;
+  }
+
+  .contact__cta-h2 {
+    font-size: 26px !important;
+  }
+
+  .contact__submit-btn {
+    font-size: 1.3rem;
   }
 }
