--- a/covered-bridge-squeeze-page/src/pages/home.css
+++ b/covered-bridge-squeeze-page/src/pages/home.css
@@ -233,6 +233,7 @@
   display: none;
   height: calc(100vh - 0.5rem - 8px);
   height: auto;
+  height: 100vh;
   width: 100vw;
   justify-content: center;
   align-items: center;
@@ -365,8 +366,8 @@
 .contact-options {
   background-color: #242424;
   color: #f5f5f5;
-  height: 100vh;
   height: auto;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -520,7 +521,7 @@
 }
 
 .contact-note {
-  margin-top: 1.5rem;
+  margin-top: 2rem;
   font-size: 1rem;
 }
 
@@ -539,6 +540,14 @@
 .cash-green {
   color: #b6e5b6e1;
   color: #a8d5ba;
+}
+
+@media (min-width: 1400px) {
+  .video-section--inner {
+    max-height: 662px;
+    height: 100%;
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 1024px) {
