--- a/covered-bridge-squeeze-page/src/App.css
+++ b/covered-bridge-squeeze-page/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  flex-direction: column;
 }
 
 .App-logo {
