--- a/covered-bridge-squeeze-page/src/components/loading-state.css
+++ b/covered-bridge-squeeze-page/src/components/loading-state.css
@@ -1,24 +1,27 @@
 .loading-state--container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    background-color: #242424;
-    pointer-events: all;
-    overflow: hidden;
-    cursor: none;
-    z-index: 9999999;
-    height: 100vh;
-    width: 100vw;
-    color: whitesmoke;
-  }
-  
-  .loading-indicator {
-    width: 8px;
-    height: 8px;
-    color: #f5f5f5;
-    background-color: transparent;
-    border: 2px solid #f5f5f5;
-    border-radius: 4px;
-    transition: width 2s ease-in-out, height 2s ease-in-out;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: #242424;
+  pointer-events: all;
+  overflow: hidden;
+  cursor: none;
+  z-index: 9999999;
+  height: 100vh;
+  width: 100vw;
+  color: whitesmoke;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loading-indicator {
+  width: 8px;
+  height: 8px;
+  color: #f5f5f5;
+  background-color: transparent;
+  border: 2px solid #f5f5f5;
+  border-radius: 4px;
+  transition: width 2s ease-in-out, height 2s ease-in-out;
+}
