--- a/covered-bridge-squeeze-page/src/pages/contact-page.css
+++ b/covered-bridge-squeeze-page/src/pages/contact-page.css
@@ -18,7 +18,7 @@
 .contact--header {
   width: 100%;
   max-width: 100vw;
-  padding: 2rem;
+  padding: 1rem 2rem 2rem 2rem;
 }
 
 .contact-page .card-icon {
