Fix vercel linting error, anchor not have reachable link

--- a/covered-bridge-squeeze-page/src/pages/contact-page.css
+++ b/covered-bridge-squeeze-page/src/pages/contact-page.css
@@ -51,6 +51,8 @@
 .contact__submit-btn {
   padding: 1rem 6rem;
   font-size: 18px;
+  border-bottom-right-radius: 6px !important;
+  cursor: pointer;
 }
 
 .contact__submit-btn:hover {
